templates/azuredeploy.json
    {
        "$schema": "http://schema.management.azure.com/schemas/2014-04-01-preview/deploymentTemplate.json#",
        "contentVersion": "1.0.0.0",
        "parameters": {
            "administratorLoginName": {
                "type": "string"
            },
            "administratorLoginPassword": {
                "type": "securestring"
            }
        },
        "variables": {
            "networkSecurityGroupName": "labvm-nsg",
            "virtualNetworkName": "labvm-vnet",
            "addressPrefix": "10.0.0.0/24",
            "subnetPrefix": "10.0.0.0/24",
            "subnetName": "lab-subnet",
            "publicIpAddressName": "labvm-pip",
            "publicIpAddressType": "Dynamic",
            "labvmDnsName": "[concat('labvm',uniqueString(resourceGroup().id))]",
            "labvmNetworkInterfaceName": "labvm-nic",
            "virtualMachineName": "lab-vm",
            "virtualMachineSize": "Standard_DS2_v2",
            "DataScienceVmStorageAccountType": "Standard_LRS",
            "storageAccountName": "[concat('storage',uniquestring(resourceGroup().id))]",
            "storageAccountType": "Standard_LRS",
            "psScriptName": "psScript.ps1"
        },
        "resources": [{
                "name": "[variables('networkSecurityGroupName')]",
                "type": "Microsoft.Network/networkSecurityGroups",
                "apiVersion": "2017-06-01",
                "location": "[resourceGroup().location]",
                "properties": {
                    "securityRules": [{
                            "name": "Jupyter",
                            "properties": {
                                "priority": 1010,
                                "protocol": "TCP",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "9999"
                            }
                        },
                        {
                            "name": "default-allow-rdp",
                            "properties": {
                                "priority": 1030,
                                "protocol": "TCP",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "3389"
                            }
                        }
                    ]
                }
            },
            {

                "name": "[variables('virtualNetworkName')]",
                "type": "Microsoft.Network/virtualNetworks",
                "apiVersion": "2017-08-01",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/networkSecurityGroups/',variables('networkSecurityGroupName'))]"
                ],
                "properties": {
                    "addressSpace": {
                        "addressPrefixes": [
                            "[variables('addressPrefix')]"
                        ]
                    },
                    "subnets": [{
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]"
                        }
                    }]
                }
            },
            {
                "name": "[variables('publicIpAddressName')]",
                "type": "Microsoft.Network/publicIpAddresses",
                "apiVersion": "2017-08-01",
                "location": "[resourceGroup().location]",
                "sku": {
                    "name": "Basic"
                },
                "properties": {
                    "publicIpAllocationMethod": "[variables('publicIpAddressType')]",
                    "dnsSettings": {
                        "domainNameLabel": "[variables('labvmDnsName')]"
                    }
                }
            },

            {
                "name": "[variables('labvmNetworkInterfaceName')]",
                "type": "Microsoft.Network/networkInterfaces",
                "apiVersion": "2016-09-01",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                    "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]"
                ],
                "properties": {
                    "ipConfigurations": [{
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets/', variables('virtualNetworkName'), variables('subnetName'))]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
                            }
                        }
                    }],
                    "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                    }
                }
            },
            {
                "name": "[variables('virtualMachineName')]",
                "type": "Microsoft.Compute/virtualMachines",
                "apiVersion": "2016-04-30-preview",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/networkInterfaces/', variables('labvmnetworkInterfaceName'))]"
                ],
                "properties": {
                    "osProfile": {
                        "computerName": "[variables('virtualMachineName')]",
                        "adminUsername": "[parameters('administratorLoginName')]",
                        "adminPassword": "[parameters('administratorLoginPassword')]",
                        "windowsConfiguration": {
                            "provisionVmAgent": "true"
                        }
                    },
                    "hardwareProfile": {
                        "vmSize": "[variables('virtualMachineSize')]"
                    },
                    "storageProfile": {
                        "imageReference": {
                            "publisher": "MicrosoftVisualStudio",
                            "offer": "VisualStudio",
                            "sku": "VS-2017-Comm-WS2016",
                            "version": "latest"
                        },
                        "osDisk": {
                            "createOption": "fromImage",
                            "managedDisk": {
                                "storageAccountType": "[variables('DataScienceVmStorageAccountType')]"
                            }
                        },
                        "dataDisks": []
                    },
                    "networkProfile": {
                        "networkInterfaces": [{
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('labvmnetworkInterfaceName'))]"
                        }]
                    }
                },
                "resources": [{
                    "type": "Microsoft.Compute/virtualMachines/extensions",
                    "name": "[concat(variables('virtualMachineName'),'/','download')]",
                    "apiVersion": "2016-03-30",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[concat('Microsoft.Compute/virtualMachines/',variables('virtualMachineName'))]"
                    ],
                    "tags": {},
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.8",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "fileUris": [
                                "https://spektraazurelabs.blob.core.windows.net/enterprisecloud/psScript.ps1"
                            ]
                        },
                        "protectedSettings": {
                            "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File',' ', variables('psScriptName'))]"
                        }
                    }
                }],
                "dependsOn": [
                    "[concat('Microsoft.Network/networkInterfaces/', variables('labvmNetworkInterfaceName'))]"
                ]
            },


            {
                "type": "Microsoft.Storage/storageAccounts",
                "name": "[variables('storageAccountName')]",
                "apiVersion": "2016-01-01",
                "location": "[resourceGroup().location]",
                "sku": {
                    "name": "[variables('storageAccountType')]"
                },
                "kind": "Storage",
                "properties": {}
            }

        ],
        "outputs": {
            "labvmDnsName": {
                "type": "string",
                "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('publicIpAddressName'))).dnsSettings.fqdn]"
            },
            "labvmUsername": {
                "type": "string",
                "value": "[parameters('administratorLoginName')]"
            },
            "labvmPassword": {
                "type": "string",
                "value": "[parameters('administratorLoginPassword')]"
            }

        }
    }
